[package]
name = "rusty_tweet"
version = "0.1.0"
authors = ["niranjana687 <niranjana687@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
serde = "0.5.1"
csv = "1.1.3"